--- a/playbooks/timezone.yaml
+++ b/playbooks/timezone.yaml
@@ -1,9 +1,9 @@
 ---
 - name: Timezone
-  hosts: all
+  hosts: application
   become: true
   tasks:
-  - name: Set timezone to America/Marigot
+  - name: Set timezone
     community.general.timezone:
-      name: America/Marigot
+      name: "{{ timezone }}" 
 
